# evaluator_blog

./: README.md  pyproject.toml
src/evaluator_blog/: __init__.py  evaluator.py
src/evaluator_blog/metrics/: __init__.py  bleu.py  rouge.py
src/evaluator_blog/tests/: test_rouge.py
tests/: test_bleu.py  test_rouge.py
